# FastchargeAPI

./: .eslintrc.js  .gitignore  .gitmodules  .graphqlrc.yml  .prettierrc.yml  .zshrc  README.md  devenv.bash  dynamodb.yml  go.work  go.work.sum  initenv.bash  jest.config.ts  local-npm.dockerfile  package-lock.json  package.json  pyproject.toml  start-local-npm.bash  tsconfig.json
.github/aws/: package.json  samconfig.toml  template.yaml
.github/setup-push/: action.yml
.github/workflows/: deploy-no-test.yml  push.yml
auth-service/: .gitignore  README.md  codegen.yml  go.mod  go.sum  package-lock.json  package.json  samconfig.toml  template.yaml  tsconfig.json
auth-service/.aws-sam/: build.toml
auth-service/.symlinks/: graphql-service
cli/: Makefile  coverage.xml  fastapi.py  fastcharge.py  graphql.config.yaml  graphql_schema.json  main.py  main_client.py  main_dev.py  package.json  pyproject.toml
cli/fastcharge_cli/: __init__.py  account.py  api.py  app.py  client_subscribe.py  config.py  dev_account.py  dev_api.py  dev_app.py  dev_pricing.py  dev_stripe.py  exceptions.py  fastapi_account.py  fastapi_subscribe.py  fastcharge_account.py  fastcharge_api.py  fastcharge_app.py  fastcharge_pricing.py  fastcharge_stripe.py  graphql.py  group.py  groups.py  http.py  local_server.py  login.py  login_server.py  pricing.py  remote_secret.py  subscribe.py  token.py  validate.py
cli/fastcharge_cli/__generated__/: app_graphql.py
cli/fastchargeapi_cli/: account.py  api.py  auth_file.py  config.py  context_obj.py  exceptions.py  fastapi_account.py  fastapi_api.py  fastapi_subscription.py  fastcharge_account.py  fastcharge_api.py  fastcharge_app.py  fastcharge_pricing.py  fastcharge_stripe.py  graphql.py  graphql_client.py  groups.py  http.py  local_server.py  login.py  main.py  operations.graphql  remote_secret.py  token.py  validate.py  version.py
cli/fastchargeapi_cli/__generated__/: gql_operations.py  schema.py
cli/tests/: sqs_graphql_client.py  test-operations.graphql  utils.py
cli/tests/account/: test_account_info.py  test_account_withdraw.py
cli/tests/fastapi/account/: test_info.py  test_subcommands.py  test_update.py
cli/tests/fastapi/api/: test_list.py  test_subcommands.py
cli/tests/fastapi/login/: test_login.py
cli/tests/fastapi/logout/: test_logout.py
cli/tests/fastapi/subscription/: test_add.py  test_list.py  test_remove.py  test_subcommands.py
cli/tests/fastapi/token/: test_create.py  test_revoke.py  test_subcommands.py
cli/tests/fastcharge/account/: test_info.py  test_subcommands.py  test_topup.py  test_update.py  test_withdraw.py
cli/tests/fastcharge/api/: test_add.py  test_list.py  test_remove.py  test_subcommands.py  test_update.py
cli/tests/fastcharge/app/: test_create.py  test_delete.py  test_list.py  test_subcommands.py  test_update.py
cli/tests/fastcharge/login/: test_login.py
cli/tests/fastcharge/logout/: test_logout.py
cli/tests/fastcharge/pricing/: test_add.py  test_list.py  test_subcommands.py  test_update.py
echo-service/: package.json  samconfig.toml  template.yaml
fastchargeapi-cli-v2/: build.js  codegen.yml  jest.config.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
gateway-service/: .gitignore  Makefile  README.md  devenv.json  ec-secp256k1-priv-key.pem  ec-secp256k1-pub-key.pem  genqlient.yml  go.mod  go.sum  jest.config.ts  nodemon.config.json  package-lock.json  package.json  printEnvFile.ts  samconfig.toml  template.yaml  testenv.json  tsconfig.json
gateway-service-v2/: Makefile  README.md  ec_private.pem  ec_public.pem  genqlient.yml  go.mod  go.sum  template.yaml
graphql-service/: Makefile  README.md  devenv.json  package-lock.json  package.json  samconfig-dynamodb.toml  samconfig.toml  template-dynamodb.yaml  template.yaml
jest-reporters/: ci-jest-json-reporter.js  jest-json-reporter.js
payment-service/: .gitignore  Makefile  README.md  build.ts  codegen.yml  jest.config.ts  package-lock.json  package.json  samconfig.toml  stripe-client.ts  template.yaml  tsconfig.json
resource-service/: README.md  samconfig.toml  template.yaml
sam-app/: template.yaml
search-service/: codegen.yml  jest.config.ts  nodemon.config.json  package-lock.json  package.json  rds-exec-stmt  samconfig.toml  template.yaml  tsconfig.json
test-suites/: launch.py  setup-an-app.py
(+809 files in other folders)
