[tool.poetry]
name = "fastchargeapi-cli"
version = "0.1.0"
description = ""
authors = ["Yu Li <ylilarry@gmail.com>"]
readme = "README.md"
packages = [{include = "fastchargeapi_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
gql = {extras = ["all"], version = "^3.4.0"}
colorama = "^0.4.6"
click-aliases = "^1.0.1"
blessings = "^1.7"
sgqlc = "^16.1"
emoji = "^2.2.0"
aws-requests-auth = "^0.4.3"
flask-cors = "^3.0.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
