[tool.poetry]
name = "fastchargeapi-cli"
version = "0.0.1"
description = "Official CLI for managing apps and account on FastchargeAPI.com"
authors = ["FastchargeAPI <fastchargeapi@gmail.com>"]
license = "GNU v3.0"
homepage = "https://fastchargeapi.com"
repository = "https://github.com/FastchargeAPI/fastchargeapi-cli"
packages = [{include = "fastchargeapi_cli"}]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
gql = {extras = ["all"], version = "^3.4.0"}
colorama = "^0.4.6"
click-aliases = "^1.0.1"
blessings = "^1.7"
sgqlc = "^16.1"
emoji = "^2.2.0"
aws-requests-auth = "^0.4.3"
flask-cors = "^3.0.10"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}

[tool.poetry.scripts]
fastcharge = 'fastchargeapi_cli.main:fastcharge'
fastapi = 'fastchargeapi_cli.main:fastapi'

[tool.poetry.group.dev.dependencies]
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
